# pytest-playwright-visual-snapshot

./: .copier-answers.yml  .envrc  .tool-versions  CHANGELOG.md  Justfile  README.md  SKILLS.md  TODO  pyproject.toml
.cursor/rules/: python.mdc
.github/instructions/: python.instructions.md
.github/workflows/: build_and_publish.yml
pytest_playwright_visual_snapshot/: __init__.py  config.py  plugin.py
pytest_playwright_visual_snapshot/matchers/: __init__.py  base.py  odiff_matcher.py  pixelmatch_matcher.py
tests/: conftest.py  test_disable_snapshots.py  test_identical_filenames.py  test_import.py  test_odiff_matcher.py  test_playwright_kwargs.py  test_screenshot_kwargs.py  test_snapshot.py  test_snapshot_failures_path.py  test_visual_snapshots.py
tests/integration/: test_visual_snapshots_odiff.py
