[project]
name = "pytest-playwright-visual-snapshot"
version = "0.1.0"
description = ""
keywords = []
readme = "README.md"
requires-python = ">=3.9"
dependencies = []
authors = [{ name = "Michael Bianco", email = "mike@mikebian.co" }]
urls = { "Repository" = "https://github.com/iloveitaly/pytest-playwright-visual-snapshot" }

[project.entry-points.pytest11]
playwright_visual_snapshot = "playwright_visual_snapshot.plugin"

# https://github.com/astral-sh/uv/issues/5200
[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["pytest>=8.3.3"]
